# AuroraNotifier

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  context.txt  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
data/: aurora_alert.db
frontend/: README.md  firebase-messaging-sw.js  index.html  script.js  style.css
src/: scheduler.py
src/api/: database.py  main.py  schemas.py
src/engine/: aurora_engine.py  models.py
src/ingest/: aurora_data.py  weather_data.py
src/notify/: fcm_service.py
src/utils/: config.py
tests/: test_aurora_engine.py
